Fix social icon spacing on mobile

--- a/assets/scss/layouts/_footer.scss
+++ b/assets/scss/layouts/_footer.scss
@@ -2,6 +2,10 @@
   border-top: 1px solid $gray-200;
   padding-top: 1.125rem;
   padding-bottom: 1.125rem;
+
+  .thanks {
+    font-size: 0.75rem;
+  }
 }
 
 .footer ul {
